examples/test/testpolicy19615.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19615
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key48: value28
      key0: value28
      key12: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value40
      podSelector:
        matchLabels:
          key36: value21
          key0: value7
